kubernetes/clusters/vcenter/apps/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-frontend
  namespace: lvic-webapp
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: webapp-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-backend
  namespace: lvic-webapp
spec:
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    app: webapp-backend
